Create Navigation Menu Relates #5

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
         "ts": "never",
         "tsx": "never"
       }
-    ]
+    ],
+    "react/function-component-definition" :0,
+    "arrow-body-style" :0
   }
 }
