--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "antd": "^4.21.4",
+    "axios": "^0.27.2",
     "i18next": "^21.8.11",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-fs-backend": "^1.1.4",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.17.3",
