--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "react/function-component-definition" :0,
     "arrow-body-style" :0,
     "no-return-assign" :0,
-    "import/prefer-default-export" :0
+    "import/prefer-default-export" :0,
+    "no-unused-vars" :0
   }
 }
