--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "noUnusedLocals": false,
+    "noUnusedParameters": true,
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,6 +22,7 @@
     "isolatedModules": false,
     "noEmit": true,
     "jsx": "react-jsx",
+    
   },
   "include": [
     "src"
