--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "arrow-body-style" :0,
     "no-return-assign" :0,
     "import/prefer-default-export" :0,
-    "no-unused-vars" :0
+    "no-unused-vars" :0,
+    "camelcase" :0
   }
 }
