--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-dom": "^18.0.5",
     "antd": "^4.21.4",
     "axios": "^0.27.2",
+    "dragula": "^3.7.3",
     "i18next": "^21.8.11",
     "i18next-browser-languagedetector": "^6.1.4",
     "i18next-fs-backend": "^1.1.4",
     "mobx": "^6.6.1",
+    "mobx-react": "^7.5.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dragula": "^3.7.1",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
