--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,8 @@
     "no-return-assign" :0,
     "import/prefer-default-export" :0,
     "no-unused-vars" :0,
-    "camelcase" :0
+    "camelcase" :0,
+    "react/jsx-props-no-spreading" : 0,
+    "react/jsx-wrap-multilines" :0
   }
 }
