--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,8 @@
     "no-unused-vars" :0,
     "camelcase" :0,
     "react/jsx-props-no-spreading" : 0,
-    "react/jsx-wrap-multilines" :0
+    "react/jsx-wrap-multilines" : 0,
+    "jsx-a11y/anchor-is-valid" : 0,
+    "no-duplicate-case" : 0
   }
 }
